added enable-preview in jlink execute, added http-server and https-server