@@ -94,6 +94,7 @@
           </execution>
         </executions>
         <configuration>
+          <ignoreSigningInformation>true</ignoreSigningInformation>
           <verbose>true</verbose>
           <includeLocales>
             <locale>it</locale>
@@ -105,7 +106,7 @@
             <modulePath>${java.home}/jmods</modulePath>
           </modulePaths>
           <addOptions>
-            <addOption>"-XX:+DoEscapeAnalysis -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseZGC -XX:+ZGenerational -Xms64m -Xmx128m -ea -Dfile.encoding=UTF-8"</addOption>
+            <addOption>"--enable-preview -XX:+DoEscapeAnalysis -XX:+UseStringDeduplication -XX:+UseCompressedOops -XX:+UseZGC -XX:+ZGenerational -Xms64m -Xmx128m -ea -Dfile.encoding=UTF-8"</addOption>
           </addOptions>
           <classifier>dist-${os.arch}</classifier>
           <launcher>httpserver=httpserver/io.trydent.httpserver.Main</launcher>
